parser.output
Terminals unused in grammar

   T_EOF
   T_CLASS


Grammar

    0 $accept: Start $end

    1 Start: Classes

    2 Classes: Classes Class
    3        | Class

    4 Class: T_IDENTIFIER ExtendsBody T_OPENBRACKET ClassBody T_CLOSEBRACKET

    5 ExtendsBody: T_EXTENDS T_IDENTIFIER
    6            | %empty

    7 ClassBody: Mems Methods
    8          | Mems
    9          | Methods
   10          | %empty

   11 Mems: Mems Mem T_SEMICOLON
   12     | Mem T_SEMICOLON

   13 Mem: MemType T_IDENTIFIER

   14 MemType: T_BOOLEAN
   15        | T_INTEGER
   16        | T_IDENTIFIER

   17 Methods: Methods Method
   18        | Method

   19 ReturnType: T_BOOLEAN
   20           | T_INTEGER
   21           | T_IDENTIFIER
   22           | T_NONE

   23 Method: T_IDENTIFIER T_OPENPAREN Params T_CLOSEPAREN T_ARROW ReturnType T_OPENBRACKET Body T_CLOSEBRACKET
   24       | T_IDENTIFIER T_OPENPAREN T_CLOSEPAREN T_ARROW ReturnType T_OPENBRACKET Body T_CLOSEBRACKET

   25 Params: Params T_COMMA Param
   26       | Param

   27 Stmnts: Stmnts Stmnt
   28       | Stmnt

   29 Stmnt: MethodBody T_SEMICOLON
   30      | Assignment T_SEMICOLON
   31      | WhileBody
   32      | RepeatUntil T_SEMICOLON
   33      | PrintBody T_SEMICOLON
   34      | IfStmnt

   35 Assignment: T_IDENTIFIER T_DOT T_IDENTIFIER T_ASSIGNMENT Expr
   36           | T_IDENTIFIER T_ASSIGNMENT Expr

   37 WhileBody: T_WHILE Expr T_OPENBRACKET Stmnts T_CLOSEBRACKET

   38 MemberBody: T_IDENTIFIER T_DOT T_IDENTIFIER

   39 Param: T_IDENTIFIER T_COLON MemType

   40 Body: Declrs Stmnts ReturnBody
   41     | Declrs ReturnBody
   42     | Stmnts ReturnBody
   43     | ReturnBody

   44 Declrs: Declrs X T_SEMICOLON
   45       | X T_SEMICOLON

   46 X: MemType Declr

   47 Declr: Declr T_COMMA T_IDENTIFIER
   48      | T_IDENTIFIER

   49 ReturnBody: T_RETURN Expr T_SEMICOLON
   50           | %empty

   51 Args: Args T_COMMA Expr
   52     | Expr

   53 MethodBody: T_IDENTIFIER T_OPENPAREN Args T_CLOSEPAREN
   54           | T_IDENTIFIER T_OPENPAREN T_CLOSEPAREN
   55           | T_IDENTIFIER T_DOT T_IDENTIFIER T_OPENPAREN Args T_CLOSEPAREN
   56           | T_IDENTIFIER T_DOT T_IDENTIFIER T_OPENPAREN T_CLOSEPAREN

   57 ClassID: T_IDENTIFIER
   58        | T_IDENTIFIER T_OPENPAREN Args T_CLOSEPAREN
   59        | T_IDENTIFIER T_OPENPAREN T_CLOSEPAREN

   60 RepeatUntil: T_REPEAT T_OPENBRACKET Stmnts T_CLOSEBRACKET T_UNTIL T_OPENPAREN Expr T_CLOSEPAREN

   61 IfStmnt: T_IF Expr T_OPENBRACKET Stmnts T_CLOSEBRACKET IfElseBody

   62 IfElseBody: T_ELSE T_OPENBRACKET Stmnts T_CLOSEBRACKET
   63           | %empty

   64 PrintBody: T_PRINT Expr

   65 Expr: T_OPENPAREN Expr T_CLOSEPAREN
   66     | Expr T_AND Expr
   67     | Expr T_OR Expr
   68     | Expr T_LESSEQ Expr
   69     | Expr T_LESS Expr
   70     | Expr T_PLUS Expr
   71     | Expr T_EQUALS Expr
   72     | Expr T_MINUS Expr
   73     | Expr T_MULT Expr
   74     | Expr T_DIVIDE Expr
   75     | T_MINUS Expr
   76     | T_NOT Expr
   77     | T_LITERAL
   78     | MemberBody
   79     | T_IDENTIFIER
   80     | MethodBody
   81     | T_TRUE
   82     | T_FALSE
   83     | T_NEW ClassID


Terminals, with rules where they appear

$end (0) 0
error (256)
T_ARROW (258) 23 24
T_PLUS (259) 70
T_MINUS (260) 72 75
T_MULT (261) 73
T_DIVIDE (262) 74
T_AND (263) 66
T_OR (264) 67
T_NOT (265) 76
T_OPENPAREN (266) 23 24 53 54 55 56 58 59 60 65
T_CLOSEPAREN (267) 23 24 53 54 55 56 58 59 60 65
T_OPENBRACKET (268) 4 23 24 37 60 61 62
T_CLOSEBRACKET (269) 4 23 24 37 60 61 62
T_SEMICOLON (270) 11 12 29 30 32 33 44 45 49
T_COMMA (271) 25 47 51
T_DOT (272) 35 38 55 56
T_ASSIGNMENT (273) 35 36
T_LESSEQ (274) 68
T_LESS (275) 69
T_EQUALS (276) 71
T_IF (277) 61
T_ELSE (278) 62
T_WHILE (279) 37
T_REPEAT (280) 60
T_UNTIL (281) 60
T_PRINT (282) 64
T_LITERAL (283) 77
T_TRUE (284) 81
T_FALSE (285) 82
T_BOOLEAN (286) 14 19
T_INTEGER (287) 15 20
T_NONE (288) 22
T_NEW (289) 83
T_EXTENDS (290) 5
T_EOF (291)
T_COLON (292) 39
T_RETURN (293) 49
T_CLASS (294)
T_IDENTIFIER (295) 4 5 13 16 21 23 24 35 36 38 39 47 48 53 54 55 56
    57 58 59 79
NOT (296)
UNARYMINUS (297)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
Start (44)
    on left: 1, on right: 0
Classes (45)
    on left: 2 3, on right: 1 2
Class (46)
    on left: 4, on right: 2 3
ExtendsBody (47)
    on left: 5 6, on right: 4
ClassBody (48)
    on left: 7 8 9 10, on right: 4
Mems (49)
    on left: 11 12, on right: 7 8 11
Mem (50)
    on left: 13, on right: 11 12
MemType (51)
    on left: 14 15 16, on right: 13 39 46
Methods (52)
    on left: 17 18, on right: 7 9 17
ReturnType (53)
    on left: 19 20 21 22, on right: 23 24
Method (54)
    on left: 23 24, on right: 17 18
Params (55)
    on left: 25 26, on right: 23 25
Stmnts (56)
    on left: 27 28, on right: 27 37 40 42 60 61 62
Stmnt (57)
    on left: 29 30 31 32 33 34, on right: 27 28
Assignment (58)
    on left: 35 36, on right: 30
WhileBody (59)
    on left: 37, on right: 31
MemberBody (60)
    on left: 38, on right: 78
Param (61)
    on left: 39, on right: 25 26
Body (62)
    on left: 40 41 42 43, on right: 23 24
Declrs (63)
    on left: 44 45, on right: 40 41 44
X (64)
    on left: 46, on right: 44 45
Declr (65)
    on left: 47 48, on right: 46 47
ReturnBody (66)
    on left: 49 50, on right: 40 41 42 43
Args (67)
    on left: 51 52, on right: 51 53 55 58
MethodBody (68)
    on left: 53 54 55 56, on right: 29 80
ClassID (69)
    on left: 57 58 59, on right: 83
RepeatUntil (70)
    on left: 60, on right: 32
IfStmnt (71)
    on left: 61, on right: 34
IfElseBody (72)
    on left: 62 63, on right: 61
PrintBody (73)
    on left: 64, on right: 33
Expr (74)
    on left: 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
    83, on right: 35 36 37 49 51 52 60 61 64 65 66 67 68 69 70 71 72
    73 74 75 76


State 0

    0 $accept: . Start $end

    T_IDENTIFIER  shift, and go to state 1

    Start    go to state 2
    Classes  go to state 3
    Class    go to state 4


State 1

    4 Class: T_IDENTIFIER . ExtendsBody T_OPENBRACKET ClassBody T_CLOSEBRACKET

    T_EXTENDS  shift, and go to state 5

    $default  reduce using rule 6 (ExtendsBody)

    ExtendsBody  go to state 6


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 7


State 3

    1 Start: Classes .
    2 Classes: Classes . Class

    T_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 1 (Start)

    Class  go to state 8


State 4

    3 Classes: Class .

    $default  reduce using rule 3 (Classes)


State 5

    5 ExtendsBody: T_EXTENDS . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 9


State 6

    4 Class: T_IDENTIFIER ExtendsBody . T_OPENBRACKET ClassBody T_CLOSEBRACKET

    T_OPENBRACKET  shift, and go to state 10


State 7

    0 $accept: Start $end .

    $default  accept


State 8

    2 Classes: Classes Class .

    $default  reduce using rule 2 (Classes)


State 9

    5 ExtendsBody: T_EXTENDS T_IDENTIFIER .

    $default  reduce using rule 5 (ExtendsBody)


State 10

    4 Class: T_IDENTIFIER ExtendsBody T_OPENBRACKET . ClassBody T_CLOSEBRACKET

    T_BOOLEAN     shift, and go to state 11
    T_INTEGER     shift, and go to state 12
    T_IDENTIFIER  shift, and go to state 13

    $default  reduce using rule 10 (ClassBody)

    ClassBody  go to state 14
    Mems       go to state 15
    Mem        go to state 16
    MemType    go to state 17
    Methods    go to state 18
    Method     go to state 19


State 11

   14 MemType: T_BOOLEAN .

    $default  reduce using rule 14 (MemType)


State 12

   15 MemType: T_INTEGER .

    $default  reduce using rule 15 (MemType)


State 13

   16 MemType: T_IDENTIFIER .
   23 Method: T_IDENTIFIER . T_OPENPAREN Params T_CLOSEPAREN T_ARROW ReturnType T_OPENBRACKET Body T_CLOSEBRACKET
   24       | T_IDENTIFIER . T_OPENPAREN T_CLOSEPAREN T_ARROW ReturnType T_OPENBRACKET Body T_CLOSEBRACKET

    T_OPENPAREN  shift, and go to state 20

    $default  reduce using rule 16 (MemType)


State 14

    4 Class: T_IDENTIFIER ExtendsBody T_OPENBRACKET ClassBody . T_CLOSEBRACKET

    T_CLOSEBRACKET  shift, and go to state 21


State 15

    7 ClassBody: Mems . Methods
    8          | Mems .
   11 Mems: Mems . Mem T_SEMICOLON

    T_BOOLEAN     shift, and go to state 11
    T_INTEGER     shift, and go to state 12
    T_IDENTIFIER  shift, and go to state 13

    $default  reduce using rule 8 (ClassBody)

    Mem      go to state 22
    MemType  go to state 17
    Methods  go to state 23
    Method   go to state 19


State 16

   12 Mems: Mem . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 24


State 17

   13 Mem: MemType . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 25


State 18

    9 ClassBody: Methods .
   17 Methods: Methods . Method

    T_IDENTIFIER  shift, and go to state 26

    $default  reduce using rule 9 (ClassBody)

    Method  go to state 27


State 19

   18 Methods: Method .

    $default  reduce using rule 18 (Methods)


State 20

   23 Method: T_IDENTIFIER T_OPENPAREN . Params T_CLOSEPAREN T_ARROW ReturnType T_OPENBRACKET Body T_CLOSEBRACKET
   24       | T_IDENTIFIER T_OPENPAREN . T_CLOSEPAREN T_ARROW ReturnType T_OPENBRACKET Body T_CLOSEBRACKET

    T_CLOSEPAREN  shift, and go to state 28
    T_IDENTIFIER  shift, and go to state 29

    Params  go to state 30
    Param   go to state 31


State 21

    4 Class: T_IDENTIFIER ExtendsBody T_OPENBRACKET ClassBody T_CLOSEBRACKET .

    $default  reduce using rule 4 (Class)


State 22

   11 Mems: Mems Mem . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 32


State 23

    7 ClassBody: Mems Methods .
   17 Methods: Methods . Method

    T_IDENTIFIER  shift, and go to state 26

    $default  reduce using rule 7 (ClassBody)

    Method  go to state 27


State 24

   12 Mems: Mem T_SEMICOLON .

    $default  reduce using rule 12 (Mems)


State 25

   13 Mem: MemType T_IDENTIFIER .

    $default  reduce using rule 13 (Mem)


State 26

   23 Method: T_IDENTIFIER . T_OPENPAREN Params T_CLOSEPAREN T_ARROW ReturnType T_OPENBRACKET Body T_CLOSEBRACKET
   24       | T_IDENTIFIER . T_OPENPAREN T_CLOSEPAREN T_ARROW ReturnType T_OPENBRACKET Body T_CLOSEBRACKET

    T_OPENPAREN  shift, and go to state 20


State 27

   17 Methods: Methods Method .

    $default  reduce using rule 17 (Methods)


State 28

   24 Method: T_IDENTIFIER T_OPENPAREN T_CLOSEPAREN . T_ARROW ReturnType T_OPENBRACKET Body T_CLOSEBRACKET

    T_ARROW  shift, and go to state 33


State 29

   39 Param: T_IDENTIFIER . T_COLON MemType

    T_COLON  shift, and go to state 34


State 30

   23 Method: T_IDENTIFIER T_OPENPAREN Params . T_CLOSEPAREN T_ARROW ReturnType T_OPENBRACKET Body T_CLOSEBRACKET
   25 Params: Params . T_COMMA Param

    T_CLOSEPAREN  shift, and go to state 35
    T_COMMA       shift, and go to state 36


State 31

   26 Params: Param .

    $default  reduce using rule 26 (Params)


State 32

   11 Mems: Mems Mem T_SEMICOLON .

    $default  reduce using rule 11 (Mems)


State 33

   24 Method: T_IDENTIFIER T_OPENPAREN T_CLOSEPAREN T_ARROW . ReturnType T_OPENBRACKET Body T_CLOSEBRACKET

    T_BOOLEAN     shift, and go to state 37
    T_INTEGER     shift, and go to state 38
    T_NONE        shift, and go to state 39
    T_IDENTIFIER  shift, and go to state 40

    ReturnType  go to state 41


State 34

   39 Param: T_IDENTIFIER T_COLON . MemType

    T_BOOLEAN     shift, and go to state 11
    T_INTEGER     shift, and go to state 12
    T_IDENTIFIER  shift, and go to state 42

    MemType  go to state 43


State 35

   23 Method: T_IDENTIFIER T_OPENPAREN Params T_CLOSEPAREN . T_ARROW ReturnType T_OPENBRACKET Body T_CLOSEBRACKET

    T_ARROW  shift, and go to state 44


State 36

   25 Params: Params T_COMMA . Param

    T_IDENTIFIER  shift, and go to state 29

    Param  go to state 45


State 37

   19 ReturnType: T_BOOLEAN .

    $default  reduce using rule 19 (ReturnType)


State 38

   20 ReturnType: T_INTEGER .

    $default  reduce using rule 20 (ReturnType)


State 39

   22 ReturnType: T_NONE .

    $default  reduce using rule 22 (ReturnType)


State 40

   21 ReturnType: T_IDENTIFIER .

    $default  reduce using rule 21 (ReturnType)


State 41

   24 Method: T_IDENTIFIER T_OPENPAREN T_CLOSEPAREN T_ARROW ReturnType . T_OPENBRACKET Body T_CLOSEBRACKET

    T_OPENBRACKET  shift, and go to state 46


State 42

   16 MemType: T_IDENTIFIER .

    $default  reduce using rule 16 (MemType)


State 43

   39 Param: T_IDENTIFIER T_COLON MemType .

    $default  reduce using rule 39 (Param)


State 44

   23 Method: T_IDENTIFIER T_OPENPAREN Params T_CLOSEPAREN T_ARROW . ReturnType T_OPENBRACKET Body T_CLOSEBRACKET

    T_BOOLEAN     shift, and go to state 37
    T_INTEGER     shift, and go to state 38
    T_NONE        shift, and go to state 39
    T_IDENTIFIER  shift, and go to state 40

    ReturnType  go to state 47


State 45

   25 Params: Params T_COMMA Param .

    $default  reduce using rule 25 (Params)


State 46

   24 Method: T_IDENTIFIER T_OPENPAREN T_CLOSEPAREN T_ARROW ReturnType T_OPENBRACKET . Body T_CLOSEBRACKET

    T_IF          shift, and go to state 48
    T_WHILE       shift, and go to state 49
    T_REPEAT      shift, and go to state 50
    T_PRINT       shift, and go to state 51
    T_BOOLEAN     shift, and go to state 11
    T_INTEGER     shift, and go to state 12
    T_RETURN      shift, and go to state 52
    T_IDENTIFIER  shift, and go to state 53

    $default  reduce using rule 50 (ReturnBody)

    MemType      go to state 54
    Stmnts       go to state 55
    Stmnt        go to state 56
    Assignment   go to state 57
    WhileBody    go to state 58
    Body         go to state 59
    Declrs       go to state 60
    X            go to state 61
    ReturnBody   go to state 62
    MethodBody   go to state 63
    RepeatUntil  go to state 64
    IfStmnt      go to state 65
    PrintBody    go to state 66


State 47

   23 Method: T_IDENTIFIER T_OPENPAREN Params T_CLOSEPAREN T_ARROW ReturnType . T_OPENBRACKET Body T_CLOSEBRACKET

    T_OPENBRACKET  shift, and go to state 67


State 48

   61 IfStmnt: T_IF . Expr T_OPENBRACKET Stmnts T_CLOSEBRACKET IfElseBody

    T_MINUS       shift, and go to state 68
    T_NOT         shift, and go to state 69
    T_OPENPAREN   shift, and go to state 70
    T_LITERAL     shift, and go to state 71
    T_TRUE        shift, and go to state 72
    T_FALSE       shift, and go to state 73
    T_NEW         shift, and go to state 74
    T_IDENTIFIER  shift, and go to state 75

    MemberBody  go to state 76
    MethodBody  go to state 77
    Expr        go to state 78


State 49

   37 WhileBody: T_WHILE . Expr T_OPENBRACKET Stmnts T_CLOSEBRACKET

    T_MINUS       shift, and go to state 68
    T_NOT         shift, and go to state 69
    T_OPENPAREN   shift, and go to state 70
    T_LITERAL     shift, and go to state 71
    T_TRUE        shift, and go to state 72
    T_FALSE       shift, and go to state 73
    T_NEW         shift, and go to state 74
    T_IDENTIFIER  shift, and go to state 75

    MemberBody  go to state 76
    MethodBody  go to state 77
    Expr        go to state 79


State 50

   60 RepeatUntil: T_REPEAT . T_OPENBRACKET Stmnts T_CLOSEBRACKET T_UNTIL T_OPENPAREN Expr T_CLOSEPAREN

    T_OPENBRACKET  shift, and go to state 80


State 51

   64 PrintBody: T_PRINT . Expr

    T_MINUS       shift, and go to state 68
    T_NOT         shift, and go to state 69
    T_OPENPAREN   shift, and go to state 70
    T_LITERAL     shift, and go to state 71
    T_TRUE        shift, and go to state 72
    T_FALSE       shift, and go to state 73
    T_NEW         shift, and go to state 74
    T_IDENTIFIER  shift, and go to state 75

    MemberBody  go to state 76
    MethodBody  go to state 77
    Expr        go to state 81


State 52

   49 ReturnBody: T_RETURN . Expr T_SEMICOLON

    T_MINUS       shift, and go to state 68
    T_NOT         shift, and go to state 69
    T_OPENPAREN   shift, and go to state 70
    T_LITERAL     shift, and go to state 71
    T_TRUE        shift, and go to state 72
    T_FALSE       shift, and go to state 73
    T_NEW         shift, and go to state 74
    T_IDENTIFIER  shift, and go to state 75

    MemberBody  go to state 76
    MethodBody  go to state 77
    Expr        go to state 82


State 53

   16 MemType: T_IDENTIFIER .
   35 Assignment: T_IDENTIFIER . T_DOT T_IDENTIFIER T_ASSIGNMENT Expr
   36           | T_IDENTIFIER . T_ASSIGNMENT Expr
   53 MethodBody: T_IDENTIFIER . T_OPENPAREN Args T_CLOSEPAREN
   54           | T_IDENTIFIER . T_OPENPAREN T_CLOSEPAREN
   55           | T_IDENTIFIER . T_DOT T_IDENTIFIER T_OPENPAREN Args T_CLOSEPAREN
   56           | T_IDENTIFIER . T_DOT T_IDENTIFIER T_OPENPAREN T_CLOSEPAREN

    T_OPENPAREN   shift, and go to state 83
    T_DOT         shift, and go to state 84
    T_ASSIGNMENT  shift, and go to state 85

    $default  reduce using rule 16 (MemType)


State 54

   46 X: MemType . Declr

    T_IDENTIFIER  shift, and go to state 86

    Declr  go to state 87


State 55

   27 Stmnts: Stmnts . Stmnt
   42 Body: Stmnts . ReturnBody

    T_IF          shift, and go to state 48
    T_WHILE       shift, and go to state 49
    T_REPEAT      shift, and go to state 50
    T_PRINT       shift, and go to state 51
    T_RETURN      shift, and go to state 52
    T_IDENTIFIER  shift, and go to state 88
